Strip down to the frame, add in just a few custom AIML for corporation-specific knowledge. Also throw in official-ish XSD scraped from wayback machine and prospective custom AIML in settingsmeta.json

--- a/settingsmeta.json
+++ b/settingsmeta.json
@@ -17,6 +17,12 @@
                       "type": "input",
                       "label": "Amount of chat lines before saving brain state",
                       "value": 5
+                  },
+                  {
+                      "name": "user_custom_aiml",
+                      "type": "input",
+                      "label": "User Custom AIML",
+                      "value": "<aiml>\n</aiml>"
                   }
               ]
           }
